--- a/home.html
+++ b/home.html
@@ -329,7 +329,7 @@
                         const div = document.createElement('div');
                         div.className = 'item';
                         div.innerHTML = `
-                            <a href="sher.html?id=${id}">
+                            <a href="poem.html?id=${id}">
                                 <div class="item-title">${poem.title}</div>
                             </a>
                         `;
