--- a/shorts.html
+++ b/shorts.html
@@ -174,7 +174,7 @@
             <div class="video-wrapper">
                 <div class="video-container">
                     <video loop id="video1">
-                        <source src="https://assets.mixkit.co/videos/preview/mixkit-portrait-of-a-woman-in-a-pool-1259-large.mp4" type="video/mp4">
+                        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
