--- a/shorts.html
+++ b/shorts.html
@@ -180,7 +180,7 @@
             </div>
             <div class="user-info">
                 <div class="username">@user1</div>
-                <div class="description">هذا هو الفيديو الأول في الريلز الخاص بي #تحدي #سباحة</div>
+                <div class="description">هذا هو الفيديو الأول في الريلز الخاص بي #تحدي #أرنب</div>
                 <div class="music">
                     <i class="fas fa-music"></i>
                     <span>الصوت الأصلي - user1</span>
