--- a/shorts.html
+++ b/shorts.html
@@ -242,7 +242,7 @@
             <div class="video-wrapper">
                 <div class="video-container">
                     <video loop playsinline webkit-playsinline x-webkit-airplay="allow" id="video1">
-                        <source src="https://assets.mixkit.co/videos/preview/mixkit-portrait-of-a-woman-in-a-pool-1259-large.mp4" type="video/mp4">
+                        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
                     </video>
                     <div class="seek-bar" id="seekBar1">
                         <div class="seek-progress" id="seekProgress1"></div>
@@ -255,7 +255,7 @@
                 </div>
             </div>
             <div class="user-info">
-                <div class="username">@user1</div>
+                <div class="username">@جاسم</div>
                 <div class="description">هذا هو الفيديو الأول في الريلز الخاص بي #تحدي #سباحة</div>
                 <div class="music">
                     <i class="fas fa-music"></i>
