--- a/home.html
+++ b/home.html
@@ -481,20 +481,24 @@
             // اقتباسات افتراضية في حالة فشل التحميل
             const defaultQuotes = [
                 {
-                    text: "وما نيل المطالب بالتمني ولكن تؤخذ الدنيا غلابا",
-                    author: "أحمد شوقي"
-                },
-                {
-                    text: "إذا الشعب يوما أراد الحياة فلا بد أن يستجيب القدر",
-                    author: "أبو القاسم الشابي"
-                },
-                {
-                    text: "أنا الذي نظر الأعمى إلى أدبي وأسمعت كلماتي من به صمم",
+                    text: "لا تَلقَ دَهرَكَ إِلّا غَيرَ مُكتَرِثٍ
+مادامَ يَصحَبُ فيهِ روحَكَ البَدَنُ",
                     author: "المتنبي"
                 },
                 {
-                    text: "العلم في الصغر كالنقش على الحجر",
-                    author: "مثل عربي"
+                    text: "شرُّ البلادِ مكانٌ لا صديقَ بهِ
+وشرُّ ما يَكسِبُ الإنسانُ ما يَصِمُ",
+                    author: "المتنبي"
+                },
+                {
+                    text: "عَلى قَدرِ أَهلِ العَزمِ تَأتي العَزائِمُ
+وَتَأتي عَلى قَدرِ الكِرامِ المَكارِمُ",
+                    author: "المتنبي"
+                },
+                {
+                    text: "أنا الذي نظَر الأعمى إلى أدبي
+وأسْمعَت كلماتي مَن بهِ صَمَمُ",
+                    author: "المتنبي"
                 }
             ];
 
