--- a/video.html
+++ b/video.html
@@ -72,7 +72,7 @@
             background-color: var(--light-bg);
             color: var(--text-color);
             margin: 0;
-            padding-top: 90px;
+            padding-top: 77px;
             direction: rtl;
             min-height: 100vh;
         }
@@ -276,7 +276,7 @@
             </div>
         </div>
         
-        <h1 id="videoTitle">جاري تحميل الفيديو...</h1>
+        <h1 id="videoTitle"> </h1>
         
         <div class="video-actions">
             <button class="share-btn" id="shareButton">
