--- a/video.html
+++ b/video.html
@@ -300,7 +300,7 @@
             <i class="fab fa-telegram" style="color: #0088cc; font-size: 24px;"></i>
             <span>مشاركة عبر تيليجرام</span>
         </div>
-        <div class="share-option" onclick="shareVia('x')">
+        <div class="share-option" onclick="shareVia('twitter')">
             <i class="fab fa-x-twitter" style="color: #000; font-size: 24px;"></i>
             <span>مشاركة عبر X</span>
         </div>
