--- a/home.html
+++ b/home.html
@@ -495,7 +495,12 @@
                 {
                     text: "إذا غامرت في شرف مرومٍ فلا تقنع بما دونَ النجومِ",
                     author: "المتنبي"
+                },
+                {
+                    text: "إذا غامرت في شرف مرومٍ فلا تقنع بما دونَ النجومِ",
+                    author: "المتنبي"
                 }
+
             ];
 
             try {
