--- a/home.html
+++ b/home.html
@@ -497,7 +497,7 @@
                     author: "المتنبي"
                 },
                 {
-                    text: "إذا غامرت في شرف مرومٍ فلا تقنع بما دونَ النجومِ",
+                    text: "أعزُّ مكانٍ في الدُنى سَرجُ سابحٍ وخَيرُ جليسٍ في الزمانِ كِتابُ",
                     author: "المتنبي"
                 }
 
