--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
         }
     </style>
 </head>
+    <link rel="icon" href="assets/icons/favicon.png" type="image/png">
 <body>
     <!-- NavBar -->
     <nav class="navbar">
