--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         }
     </style>
 </head>
-    <link rel="icon" href="assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="assets/icons/favicon.jpg" type="image/jpg">
 <body>
     <!-- NavBar -->
     <nav class="navbar">
