--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="index.html">الرئيسية</a>
+                    <a href="">الرئيسية</a>
                     <a href="about.html">من نحن</a>
                     <a href="contact.html">اتصل بنا</a>
                 </div>
