--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         }
         
         .slider-control:hover {
-            color: var(--text-color);
+            color: var(--desert-color);
         }
         
         .quote-nav {
