--- a/index.html
+++ b/index.html
@@ -362,6 +362,10 @@
         }
     </style>
 </head>
+    <link rel="manifest" href="/manifest.json">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<link rel="apple-touch-icon" href="assets/icons/fullicon.jpg">
     <link rel="icon" href="assets/icons/favicon.jpg" type="image/jpg">
 <body>
     <!-- NavBar -->
