--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@
     </style>
 </head>
     <link rel="manifest" href="/manifest.json">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="apple-touch-icon" href="assets/icons/fullicon.jpeg">
