--- a/countdown.html
+++ b/countdown.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>رحلة المتنبي</title>
+  <title>منصة رحلة المتنبي</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@500&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
@@ -142,8 +142,9 @@
     }
   </style>
 </head>
+      <link rel="icon" href="assets/icons/favicon.jpg" type="image/jpg">
 <body>
-  <h1>العد التنازلي حتى افتتاح الموقع</h1>
+  <h1>العدُّ التنازليّ لإطلاق النسخة الثانية من منصّة رحلة المتنبي</h1>
   <div class="countdown-container">
     <div class="flip-card">
       <div class="flip-card-inner" id="days-card">
