--- a/share-page.html
+++ b/share-page.html
@@ -379,7 +379,7 @@
             localStorage.removeItem('authenticated');
             
             // توجيه فوري إلى صفحة إدخال الرمز
-            window.location.replace('index.html');
+            window.location.replace('pass.html');
             
             // إيقاف تحميل باقي الصفحة
             document.write('');
