--- a/share-page.html
+++ b/share-page.html
@@ -519,7 +519,7 @@
 
     <!-- الشريط السفلي -->
     <footer class="footer">
-        <p>برمجة وتصميم جاسم الفارسي لصالح منصة رحلة المتنبي &copy; 2025</p>
+        <p>حقوق البرمجة والتصميم محفوظة، جاسم الفارسي لصالح منصة رحلة المتنبي &copy; 2025</p>
         <p4>فريق العمل</p4>
         <div class="footer-names">
             <span class="footer-name">جاسم الفارسي</span>
