--- a/index.html
+++ b/index.html
@@ -389,8 +389,8 @@
                 </button>
                 <div class="dropdown-content">
                     <a href="">الرئيسية</a>
-                    <a href="about.html">من نحن</a>
-                    <a href="contact.html">اتصل بنا</a>
+                    <a href="about">من نحن</a>
+                    <a href="https://whatsapp.com/channel/0029VasnsC68qIzxZaTPGy1N">قناتنا على واتساب</a>
                 </div>
             </div>
         </div>
