--- a/about.html
+++ b/about.html
@@ -460,7 +460,7 @@
 <body>
     <!-- الهيدر الجديد -->
     <section class="hero">
-        <img src="assets/images/logo.png" alt="شعار منصة رحلة المتنبي" class="logo">
+        <img src="assets/images/white-logo.png" alt="شعار منصة رحلة المتنبي" class="logo">
         <h1>منصة رحلة المتنبي</h1>
         <p>نافذتك إلى عالم الشعر والأدب العربي الأصيل، حيث نحيي تراث المتنبي بأسلوب عصري</p>
         <div class="scroll-down" onclick="scrollToContent()">
@@ -565,7 +565,7 @@
     
     <!-- الفوتر -->
     <footer class="footer" data-aos="fade-up">
-        <img src="assets/images/logo-white.png" alt="شعار منصة رحلة المتنبي" class="footer-logo">
+        <img src="assets/images/white-logo.png" alt="شعار منصة رحلة المتنبي" class="footer-logo">
         <div class="footer-links">
             <a href="">الرئيسية</a>
             <a href="https://whatsapp.com/channel/0029VasnsC68qIzxZaTPGy1N">تابعنا على واتساب</a>
