--- a/about.html
+++ b/about.html
@@ -460,7 +460,7 @@
 <body>
     <!-- الهيدر الجديد -->
     <section class="hero">
-        <img src="assets/images/white-logo.png" alt="شعار منصة رحلة المتنبي" class="logo">
+        <img src="assets/images/white-logo.png" class="logo">
         <h1>منصة رحلة المتنبي</h1>
         <p>نافذتك إلى عالم الشعر والأدب العربي الأصيل، حيث نحيي تراث المتنبي بأسلوب عصري</p>
         <div class="scroll-down" onclick="scrollToContent()">
