--- a/about.html
+++ b/about.html
@@ -478,8 +478,7 @@
             
             <div class="quote" data-aos="zoom-in">
                 <p class="quote-text">
-                    "أنا الذي نظر الأعمى إلى أدبي وأسمعت كلماتي من به صمم، الخيل والليل والبيداء تعرفني والسيف والرمح والقرطاس والقلم"
-                </p>
+         "وما الدهر إلا من رواة قصائدي، إذا قلت شعرًا أصبح الدهر منشدًا"                </p>
                 <p class="quote-author">- أبو الطيب المتنبي</p>
             </div>
         </div>
