--- a/invite.html
+++ b/invite.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>بطاقة دعوة</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap');
-
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Tajawal', sans-serif;
+            font-family: 'Cairo', sans-serif;
         }
 
         body {
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            background: linear-gradient(135deg, #f3e7c9 0%, #d8c9a8 100%);
             height: 100vh;
             display: flex;
             justify-content: center;
@@ -27,35 +26,37 @@
         .invitation-container {
             width: 90%;
             max-width: 500px;
-            background: white;
+            background: #fff9e6;
             padding: 30px;
-            border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(139, 107, 64, 0.2);
             text-align: center;
             position: relative;
             overflow: hidden;
             transform-style: preserve-3d;
             transition: transform 0.5s ease, box-shadow 0.5s ease;
             animation: fadeIn 1s ease-out;
+            border: 1px solid #d4b483;
         }
 
         .invitation-container:hover {
             transform: translateY(-10px) rotateX(5deg);
-            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.15);
+            box-shadow: 0 15px 40px rgba(139, 107, 64, 0.3);
         }
 
         .envelope-icon {
             font-size: 3rem;
-            color: #e74c3c;
+            color: #a67c52;
             margin-bottom: 20px;
             animation: bounce 2s infinite;
         }
 
         .invitation-title {
-            color: #333;
+            color: #5c4a3a;
             margin-bottom: 20px;
             font-size: 2rem;
             position: relative;
+            font-weight: 700;
         }
 
         .invitation-title::after {
@@ -63,13 +64,13 @@
             display: block;
             width: 50px;
             height: 3px;
-            background: #e74c3c;
+            background: #a67c52;
             margin: 10px auto;
             border-radius: 3px;
         }
 
         .guest-name {
-            color: #e74c3c;
+            color: #8b6b40;
             font-size: 1.8rem;
             margin: 20px 0;
             font-weight: 700;
@@ -78,7 +79,7 @@
         }
 
         .invitation-text {
-            color: #555;
+            color: #5c4a3a;
             line-height: 1.8;
             margin-bottom: 30px;
             font-size: 1.1rem;
@@ -87,20 +88,21 @@
         .home-button {
             display: inline-block;
             padding: 12px 30px;
-            background: linear-gradient(to right, #e74c3c, #c0392b);
+            background: linear-gradient(to right, #a67c52, #8b6b40);
             color: white;
             text-decoration: none;
             border-radius: 50px;
-            font-weight: 500;
+            font-weight: 600;
             transition: all 0.3s ease;
-            box-shadow: 0 4px 15px rgba(231, 76, 60, 0.3);
+            box-shadow: 0 4px 15px rgba(139, 107, 64, 0.3);
             position: relative;
             overflow: hidden;
         }
 
         .home-button:hover {
             transform: translateY(-3px);
-            box-shadow: 0 7px 20px rgba(231, 76, 60, 0.4);
+            box-shadow: 0 7px 20px rgba(139, 107, 64, 0.4);
+            background: linear-gradient(to right, #8b6b40, #a67c52);
         }
 
         .home-button::before {
@@ -160,7 +162,7 @@
             content: "";
             position: absolute;
             border-radius: 50%;
-            background: rgba(231, 76, 60, 0.1);
+            background: rgba(166, 124, 82, 0.1);
             z-index: -1;
         }
 
@@ -212,37 +214,22 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            // بيانات المدعوين (بدلاً من ملف json خارجي)
-            const guestsData = {
-                "guests": [
-                    {
-                        "id": "1",
-                        "name": "الأستاذ أحمد محمد"
-                    },
-                    {
-                        "id": "2",
-                        "name": "الدكتورة سارة عبدالله"
-                    },
-                    {
-                        "id": "3",
-                        "name": "المهندس خالد حسن"
-                    },
-                    {
-                        "id": "4",
-                        "name": "الأستاذة نوره علي"
-                    }
-                ]
-            };
-
             // استرجاع id من URL
             const urlParams = new URLSearchParams(window.location.search);
             const guestId = urlParams.get('id') || '1'; // القيمة الافتراضية 1 إذا لم يتم تحديد id
 
-            // البحث عن المدعو
-            const guest = guestsData.guests.find(g => g.id === guestId);
-            if (guest) {
-                document.getElementById('guestName').textContent = guest.name;
-            }
+            // جلب بيانات المدعوين من ملف JSON
+            fetch('guests.json')
+                .then(response => response.json())
+                .then(data => {
+                    const guest = data.guests.find(g => g.id === guestId);
+                    if (guest) {
+                        document.getElementById('guestName').textContent = guest.name;
+                    }
+                })
+                .catch(error => {
+                    console.error('Error loading guest data:', error);
+                });
 
             // إضافة رابط للزر الرئيسي
             document.getElementById('homeButton').addEventListener('click', function(e) {
