--- a/about.html
+++ b/about.html
@@ -17,10 +17,10 @@
     
     <style>
         :root {
-            --primary: #FFFFFF; /* لون خشبي غامق */
+             --primary: #8B5A2B; /* لون خشبي غامق */
             --secondary: #D4A76A; /* لون خشبي فاتح */
             --light: #F5E8D9; /* لون خلفية فاتح */
-            --dark: #FFFFFF; /* لون نص غامق */
+            --dark: #2A2118; /* لون نص غامق */
             --accent: #A52A2A; /* لون تأكيدي */
         }
         
