--- a/invite.html
+++ b/invite.html
@@ -15,7 +15,7 @@
         }
 
         body {
-            background: linear-gradient(135deg, #f3e7c9 0%, #d8c9a8 100%);
+            background: linear-gradient(135deg, #ffffff 0%, #ffffff 100%);
             height: 100vh;
             display: flex;
             justify-content: center;
