--- a/invite.html
+++ b/invite.html
@@ -208,8 +208,8 @@
         </div>
         <h1 class="invitation-title">دعوة</h1>
         <h2 class="guest-name" id="guestName">عزيزي المدعو</h2>
-        <p class="invitation-text">يسرنا دعوتكم لحضور مناسبة سعيدة<br>يوم الجمعة الموافق 15 يونيو 2024<br>في تمام الساعة 7:00 مساءً</p>
-        <a href="#" class="home-button" id="homeButton">الصفحة الرئيسية</a>
+        <p class="invitation-text">يسرنا دعوتكم لزيارة منصة المتنبي بحلتها الجديدة<br>يوم الخميس الموافق 1 مايو 2025<br>في تمام الساعة 10:00 صباحًا</p>
+        <a href="https://www.motanabi.com" class="home-button" id="homeButton">الصفحة الرئيسية</a>
     </div>
 
     <script>
