--- a/404.html
+++ b/404.html
@@ -54,7 +54,7 @@
 
     <script>
         const path = window.location.pathname;
-        const sections = ['video', 'audio', 'poem', 'book'];
+        const sections = ['video', 'audio', 'poem', 'invite', 'book'];
 
         for (const section of sections) {
             if (path.startsWith(`/${section}/`)) {
