--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
     <style>
         body {
             font-family: 'Cairo', sans-serif;
-            background-color: #f5f5f5;
+            background-color: #ffffff;
             margin: 0;
             padding: 0;
             display: flex;
@@ -46,7 +46,6 @@
 <body>
     <div class="content">
         <div class="main-text" id="main-text">
-            هذه الصفحة غير موجودة
         </div>
         <div class="sub-text" id="sub-text">
         </div>
