--- a/invite.html
+++ b/invite.html
@@ -207,7 +207,7 @@
             <i class="fas fa-envelope-open-text"></i>
         </div>
         <h1 class="invitation-title">دعوة</h1>
-        <h2 class="guest-name" id="guestName">عزيزي المدعو</h2>
+        <h2 class="guest-name" id="guestName"></h2>
         <p class="invitation-text">يسرنا دعوتكم لزيارة منصة المتنبي بحلتها الجديدة<br>يوم الخميس الموافق 1 مايو 2025<br>في تمام الساعة 10:00 صباحًا</p>
         <a href="https://www.motanabi.com" class="home-button" id="homeButton">الصفحة الرئيسية</a>
     </div>
