--- a/jtool.html
+++ b/jtool.html
@@ -374,7 +374,7 @@
                 
                 // إضافة السجل إلى المصفوفة
                 records.push(newRecord);
-                localStorage.setItem('jsonRecords', JSON.stringify(records));
+                localStorage.setItem('jsonRecords', JSON.stringify(guests));
                 
                 // إعادة تعيين النموذج
                 resetFormBtn.click();
