--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@
             if (path.startsWith(`/${section}/`)) {
                 const id = path.split(`/${section}/`)[1];
                 if (id) {
-                    window.location.href = `/${section}.html?id=${id}`;
+                    window.location.href = `/${section}?id=${id}`;
                 }
             }
         }
