--- a/invite.html
+++ b/invite.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+    <!-- Open Graph & WhatsApp Meta Tags -->
+<meta property="og:title" content="رحلة المتنبي | دعوة خاصة">
+<meta property="og:description" content="انتظرونا في الأول من مايو المقبل">
+<meta property="og:image" content="https://www.motanabi.com/assets/images/invite-cover.jpg">
+<meta property="og:url" content="https://www.motanabi.com/">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="رحلة المتنبي">
+
+<!-- إضافات ضرورية لواتساب -->
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="دعوة رحلة المتنبي">
+<meta name="twitter:card" content="summary_large_image">
+
+<!-- تأكد من أن هذه الوسوم موجودة أيضًا -->
+<meta name="description" content="انتظرونا في الأول من مايو المقبل">
+    
     <link rel="icon" href="assets/icons/favicon.jpg" type="image/jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
