--- a/invite.html
+++ b/invite.html
@@ -252,7 +252,7 @@
             // إضافة رابط للزر الرئيسي
             document.getElementById('homeButton').addEventListener('click', function(e) {
                 e.preventDefault();
-                window.location.href = 'https://www.motanabi.com'; // استبدل بالرابط الفعلي
+                window.location.href = 'https://www.motanabi.com/countdown'; // استبدل بالرابط الفعلي
             });
         });
     </script>
