--- a/invite.html
+++ b/invite.html
@@ -5,7 +5,7 @@
 <meta property="og:title" content="رحلة المتنبي | دعوة خاصة">
 <meta property="og:description" content="انتظرونا في الأول من مايو المقبل">
 <meta property="og:image" content="https://www.motanabi.com/assets/images/invite-cover.jpg">
-<meta property="og:url" content="https://www.motanabi.com/countdown">
+<meta property="og:url" content="https://www.motanabi.com/">
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="رحلة المتنبي">
 
@@ -252,7 +252,7 @@
             // إضافة رابط للزر الرئيسي
             document.getElementById('homeButton').addEventListener('click', function(e) {
                 e.preventDefault();
-                window.location.href = 'https://www.motanabi.com/countdown'; // استبدل بالرابط الفعلي
+                window.location.href = 'https://www.motanabi.com'; // استبدل بالرابط الفعلي
             });
         });
     </script>
