--- a/invite.html
+++ b/invite.html
@@ -227,7 +227,7 @@
         <h1 class="invitation-title">دعوة</h1>
         <h2 class="guest-name" id="guestName"></h2>
         <p class="invitation-text">يسرنا دعوتكم لزيارة منصة المتنبي بحلتها الجديدة<br>يوم الخميس الموافق 1 مايو 2025<br>في تمام الساعة 10:00 صباحًا (عن بُعد)</p>
-        <a href="https://www.motanabi.com/countdown" class="home-button" id="homeButton">العد التنازلي</a>
+        <a href="https://www.motanabi.com/countdown" class="home-button" id="homeButton">الانتقال إلى الرئيسية</a>
     </div>
 
     <script>
